--- a/blog/content/styles.css
+++ b/blog/content/styles.css
@@ -108,14 +108,15 @@ body {
     background-color: #ffca84;
 }
 input[type=submit] {
-    width: 20%;
+    width: 50%;
     background-color: #ff7b31;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 10px 70px;
+    margin: -10px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    padding-bottom: 0%;
 }
 body {
     margin: 0 auto;
@@ -131,6 +132,15 @@ body {
     border-radius: 4px;
     margin: 0 auto;
 }
+.second-container {
+    width: 500px;
+    height: 500px;
+    text-align: center;
+    background-color: #ff7138;
+    margin-top: 500px;
+    border-radius: 7px;
+    margin: 0 auto;
+}
 input {
     height: 45px;
     width: 300px;
@@ -138,6 +148,7 @@ input {
     margin-top: 40px;
     margin-bottom: 15px;
     padding-left: 170px;
+    padding-bottom: 10px;
 }
 .form-input::before {
     content: "";
@@ -145,7 +156,13 @@ input {
     font-family: "FontAwesome";
     font-size: 30px;
 }
-a {
-
+.new-form-input {
+     width: 40%;
+     height:10%;
+    margin-top: 0%;
+    padding-bottom: inherit;
 }
-
+.asideClass {
+    background-color: #ffd034;
+    padding-bottom: 100px;
+}
